examples/test/testpolicy7492.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7492
  namespace: namespace93
spec:
  podSelector:
    matchLabels:
      key37: value11
      key33: value32
      key22: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value48
      podSelector:
        matchLabels:
          key2: value47
          key28: value25
          key36: value29
